Desktop/Project/jetProject/force-app/main/default/main/default/objects/Booking__c/fields/Departure_Airport__c.field-meta.xml
<CustomField>
    <fullName>Departure_Airport__c</fullName>
    <label>Departure Airport</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Berlin</fullName>
                <default>true</default>
                <label>Berlin</label>
            </value>
            <value>
                <fullName>Bordo</fullName>
            </value>
            <value>
                <fullName>Krakow</fullName>
            </value>
            <value>
                <fullName>Kyiv</fullName>
            </value>
            <value>
                <fullName>Lviv</fullName>
            </value>
            <value>
                <fullName>Madrid</fullName>
            </value>
            <value>
                <fullName>Milan</fullName>
            </value>
            <value>
                <fullName>Munich</fullName>
            </value>
            <value>
                <fullName>Paris</fullName>
            </value>
            <value>
                <fullName>Rome</fullName>
            </value>
            <value>
                <fullName>Valencia</fullName>
            </value>
            <value>
                <fullName>Warsaw</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>