Desktop/Project/jetProject/force-app/main/default/main/default/objects/Booking__c/fields/Departure_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Departure_Date_Time__c</fullName>
    <label>Departure Date/Time</label>
    <required>true</required>
    <type>Date</type>
</CustomField>