Desktop/Project/jetProject/force-app/main/default/main/default/objects/Booking__c/fields/Expected_Fly_Hours__c.field-meta.xml
<CustomField>
    <fullName>Expected_Fly_Hours__c</fullName>
    <label>Expected Fly Hours</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>