Desktop/Project/jetProject/force-app/main/default/main/default/objects/Booking__c/fields/Flied_Hours__c.field-meta.xml
<CustomField>
    <fullName>Flied_Hours__c</fullName>
    <formula>Customer__r.Total_Flied_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flied Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>