Desktop/Project/jetProject/force-app/main/default/main/default/objects/Booking__c/fields/Jet__c.field-meta.xml
<CustomField>
    <fullName>Jet__c</fullName>
    <label>Jet</label>
    <referenceTo>Jet__c</referenceTo>
    <relationshipLabel>Bookings</relationshipLabel>
    <relationshipName>JetBookings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>