Desktop/Project/jetProject/force-app/main/default/main/default/objects/Booking__c/fields/Test__c.field-meta.xml
<CustomField>
    <fullName>Test__c</fullName>
    <label>Test</label>
    <length>200</length>
    <type>Text</type>
</CustomField>