Desktop/Project/jetProject/force-app/main/default/main/default/objects/Booking__c/recordTypes/Private.recordType-meta.xml
<RecordType>
    <fullName>Private</fullName>
    <active>true</active>
    <label>Private</label>
</RecordType>