Desktop/Project/jetProject/force-app/main/default/main/default/objects/Booking__c/validationRules/Age_more_21.validationRule-meta.xml
<ValidationRule>
    <fullName>Age_more_21</fullName>
    <active>true</active>
    <errorConditionFormula>Age__c  &lt;  21</errorConditionFormula>
    <errorDisplayField>Customer__c</errorDisplayField>
    <errorMessage>You don&apos;t have the required age</errorMessage>
</ValidationRule>