Desktop/Project/jetProject/force-app/main/default/main/default/objects/Booking__c/validationRules/Flied_Hour_more_20.validationRule-meta.xml
<ValidationRule>
    <fullName>Flied_Hour_more_20</fullName>
    <active>true</active>
    <errorConditionFormula>Flied_Hours__c  &lt; 20</errorConditionFormula>
    <errorDisplayField>Customer__c</errorDisplayField>
    <errorMessage>Pilot Total Flied Hour is less than 20 hours</errorMessage>
</ValidationRule>