Desktop/Project/jetProject/force-app/main/default/main/default/objects/Booking__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Departure_Airport__c</columns>
    <columns>Arival_Airport__c</columns>
    <columns>Departure_Date_Time__c</columns>
    <columns>Expected_Fly_Hours__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>